# mlserver-inference

./: .pre-commit-config.yaml  README.md  pyproject.toml
src/mlserver_inference_pipeline/: kserve.py  models.py  predict.py
src/mlserver_inference_pipeline/destinations/: base.py  console.py  csv.py
src/mlserver_inference_pipeline/extractors/: base.py  random.py
tests/: test_destinations.py  test_extractors.py  test_models.py  test_predictors.py
