[tool.poetry]
name = "mlserver-inference-pipeline"
version = "0.1.0"
description = "Standardized and modular way to build inference pipelines on mlserver"
authors = ["Martin Morset <mmo@one.com>"]
readme = "README.md"
packages = [{include = "mlserver_inference_pipeline", from="src"}]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.10.2"
httpx = "^0.23.0"


[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
pytest = "^7.1.3"
respx = "^0.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
